# tfg-amariscal

./: .gitignore  README.md  outCameraOpenCV.txt  requirements.txt  simpleCameraNvidia.py  tensorflowError2.out  testT.py  vnc.md
datasets/objects_dataset/: 100_2031.txt  100_2033.txt  100_2036.txt  100_2038.txt  100_2039.txt  100_2041.txt  100_2042.txt  100_2043.txt  100_2044.txt  100_2045.txt  100_2046.txt  100_2048.txt  100_2050.txt  100_2051.txt  100_2052.txt  100_2053.txt  100_2054.txt  100_2055.txt  100_2057.txt  100_2065.txt  100_2067.txt  100_2068.txt  100_2069.txt  100_2070.txt  100_2071.txt  100_2073.txt  100_2076.txt  100_2078.txt  100_2079.txt  100_2081.txt  100_2082.txt  100_2083.txt  100_2084.txt  100_2086.txt  100_2088.txt  100_2091.txt  100_2096.txt  100_2097.txt  100_2100.txt  100_2108.txt  (+251 more)
docs/: OpenPilot.md  PyTorchTrafficLight.md  Temperature.md  Tensorflow.md  TensorflowTrain  TensorflowTrain.md  TensorflowvsPytorch  TensorflowvsPytorch.md
memoria/: bibliografia.bib  estilo.tex
memoria/capitulos/: capitulo1.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo4.tex.new  capitulo5.tex
memoria/portada/: abstract.tex  acronimos.tex  agradecimientos.tex  indice.tex  licencia.tex  portada.tex  resumen.tex
models/darknet_training/: yolov3-tiny_custom_objects.cfg
models/stl/: DC-motor-yellow.stl
object_detection/: tensorflow.out
object_detection/data/: mscoco_label_map.pbtxt
resources/: diagram.uxf
slides/: licencia.tex  slides.tex
src/: .simpleCameraNvidia.py.swp  cameraTest.py  circuitFollowing.py  interactive_regression.ipynb  modelToTensors.py  motorsJetson.py  my_racecar.py  recordWebcam.py  road_following.ipynb  road_following.py  road_following_live.ipynb  road_following_sim.py  simpleCameraNvidia.py  simpleCameraOpenCV.py  usb_camera.py
src/circuit_simulation/: CMakeLists.txt  package.xml
src/circuit_simulation/config/: config.yaml  light_sequence.yaml
src/circuit_simulation/launch/: circuit.launch  spawn.launch
src/circuit_simulation/models/: box.urdf  rover.urdf  rover2.urdf
src/circuit_simulation/src/: controller.py  simulatorController.py
src/circuit_simulation/world/: modified.world  modified2.world  modified3.world  modified4.world  small_city.world
src/city_real/: CMakeLists.txt  README.md  package.xml
src/city_real/config/: interface_params.yaml  real_params.yaml  yolo_v3_tiny_custom.yaml
src/city_real/launch/: autonomous_vehicle.launch  camera_interface.launch  yolo_v3_tiny_custom.launch
src/city_real/src/: autonomous_vehicle.py  camera_interface.py  controllerjetracer.py  interface.py
src/city_simulation/: CMakeLists.txt  README.md  package.xml
src/city_simulation/config/: controllers.yaml  light_sequence.yaml  sim_params.yaml  yolo_v3_tiny.yaml
src/city_simulation/launch/: city.launch  simulator_controller.launch  spawn.launch  yolo_v3_tiny.launch
src/city_simulation/models/: autonomous_vehicle.urdf  autonomous_vehicle_old.urdf
src/city_simulation/src/: simulator_controller.py
src/city_simulation/world/: city.world
src/jetcam/: read_video.py  ros_camera.py  test_ros_camera.py  test_video_camera.py  usb_camera.py  (+1 more)
(+349 files in other folders)
