<?xml version="1.0"?>
<package format="2">
	<name>circuit_simulation</name>
	<version>0.0.1</version>
	<description>Circuit simulation package</description>
	<maintainer email="a.mariscal.2018@alumnos.urjc.es">alvaro</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>catkin</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>gazebo_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>

	<build_export_depend>catkin</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>gazebo_msgs</build_export_depend>
	<build_export_depend>cv_bridge</build_export_depend>

	<exec_depend>catkin</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>gazebo_msgs</exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<export></export>
</package>