<?xml version="1.0"?>
<package format="2">
	<name>city_real</name>
	<version>0.0.1</version>
	<description>City real package</description>
	<maintainer email="a.mariscal.2018@alumnos.urjc.es">alvaro</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>catkin</depend>
	<depend>std_msgs</depend>
	<depend>rospy</depend>
	<depend>sensor_msgs</depend>
	<depend>gazebo_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>gazebo_ros</depend>
	<depend>darknet_ros_msgs</depend>

</package>